[package]
name = "acc_csv2bop"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"]}
serde_json = "^1"
clap = { version = "^4", features = ["derive"]}
indicatif = "^0.17"
dialoguer = "^0.10"
log = "^0.4"
env_logger="0.10"
